[package]
name = "pg_mooncake"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_mooncake"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["bgworker", "pg18"]
bgworker = ["moonlink_service"]
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]
pg17 = ["pgrx/pg17"]
pg18 = ["pgrx/pg18"]

[dependencies]
bincode = "2"
moonlink_rpc.path = "ivy_moonlink/src/moonlink_rpc"
moonlink_service = { path = "ivy_moonlink/src/moonlink_service", optional = true }
native-tls = "0.2"
pgrx = "0.16.1"
# Pin to the same rev as ivy_moonlink/Cargo.toml so both workspaces resolve to
# one git source. Without the rev the source string differs ("...git" vs
# "...git?rev=..."), which makes `cargo vendor --sync` see two copies of the
# same package and refuse. Pinning also stops this dep from floating to branch
# head.
postgres = { git = "https://github.com/Mooncake-Labs/rust-postgres.git", rev = "14c8e599f5551a8caa96ff5023685a6f537a1455" }
postgres-native-tls = { git = "https://github.com/Mooncake-Labs/rust-postgres.git", rev = "14c8e599f5551a8caa96ff5023685a6f537a1455" }
regex = "1"
serde_json = "1"
tokio = "1.48"

[profile.release]
codegen-units = 1
debug = 1
lto = "fat"
